--- a/restaurant.html
+++ b/restaurant.html
@@ -16,7 +16,7 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="./">Restaurant Reviews</a></h1>
+      <h1><a href="https://4netit2.github.io/Restaurant-Reviews/">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" aria-label="navigation"> 
