--- a/restaurant.html
+++ b/restaurant.html
@@ -20,7 +20,7 @@
     </nav>
     <!-- Beginning breadcrumb -->
     <ul id="breadcrumb" aria-label="navigation"> 
-      <li><a href="/">Home</a></li>
+      <li><a href="https://4netit2.github.io/Restaurant-Reviews/">Home</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
