--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
 
 <body>
   <header>
+      <a href="#maincontent" class="skip-link">Skip to main Content</a>   <!--Add skip-link-->
     <nav>
-      <h1><a href="/">Restaurant Reviews</a></h1>
+      <h1><a aria-label="Home Page" href="/">Restaurant Reviews</a></h1>
     </nav>
   </header>
 
-  <main id="maincontent">
+   <main id="maincontent" tabindex="-1">   <!--for older browser add tab-1-->
     <section id="map-container">
-      <div id="map"></div>
+      <div id="map" aria-label="map"></div>
     </section>
     <section>
       <div class="filter-options">
@@ -39,8 +40,8 @@
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZNLBgsQLzqHwJj9xeMbNlOiSvManr6VE&libraries=places&callback=initMap"></script> 
 
 
-  <footer id="footer">
-    Copyright (c) 2017 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+  <footer id="footer" aria-label="footer">
+    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
 
 </body>
