--- a/restaurant.html
+++ b/restaurant.html
@@ -16,11 +16,11 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="https://4netit2.github.io/Restaurant-Reviews/">Restaurant Reviews</a></h1>
+      <h1><a href="./">Restaurant Reviews</a></h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="navigation"> 
-      <li><a href="https://4netit2.github.io/Restaurant-Reviews/">Home</a></li>
+    <ul id="breadcrumb" aria-label="Navigation"> 
+      <li><a href="./" aria-label="Home Page" >Home Page</a></li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -36,11 +36,11 @@
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-       <h1 id="restaurant-name" aria-label="restaurant-name"></h1>   <!--aria label added-->
+       <h2 id="restaurant-name" aria-label="restaurant name"></h2>   <!--aria label added-->
       <img id="restaurant-img">
-      <p id="restaurant-cuisine"></p>
-      <p id="restaurant-address"></p>
-      <table id="restaurant-hours" aria-label="restaurant-hours"></table>  <!--aria label added-->
+      <p id="restaurant-cuisine" aria-label="restaurant cuisine"></p>
+      <p id="restaurant-address" aria-label="restaurant address"></p>
+      <table id="restaurant-hours" aria-label="restaurant hours"></table>  <!--aria label added-->
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
@@ -53,7 +53,7 @@
 
   <!-- Beginning footer -->
   <footer id="footer" aria-label="footer"> <!--aria label added-->
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018 <a href="/"><strong> Restaurant Reviews</strong></a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script> -->
