--- a/restaurant.html
+++ b/restaurant.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta name="viewport" content= "width=device-width, initial-scale=1.0">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Normalize.css for better cross-browser consistency -->
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <!-- Main CSS file -->
   <link rel="stylesheet" href="css/styles.css" type="text/css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
   <title>Restaurant Info</title>
 </head>
 
@@ -16,11 +17,15 @@
   <header>
     <!-- Beginning nav -->
     <nav>
-      <h1><a href="./">Restaurant Reviews</a></h1>
+      <h1>
+        <a href="./">Restaurant Reviews</a>
+      </h1>
     </nav>
     <!-- Beginning breadcrumb -->
-    <ul id="breadcrumb" aria-label="Navigation"> 
-      <li><a href="./" aria-label="Home Page" >Home Page</a></li>
+    <ul id="breadcrumb" aria-label="breadcrumb" aria-role="navigation">
+      <li>
+        <a href="./" aria-label="Home Page">Home Page</a>
+      </li>
     </ul>
     <!-- End breadcrumb -->
     <!-- End nav -->
@@ -31,16 +36,18 @@
   <main id="maincontent">
     <!-- Beginning map -->
     <section id="map-container">
-      <div id="map" aria-label="map"></div>
+      <div id="map" aria-label="map" role="application"></div>
     </section>
     <!-- End map -->
     <!-- Beginning restaurant -->
     <section id="restaurant-container">
-       <h2 id="restaurant-name" aria-label="restaurant name"></h2>   <!--aria label added-->
+      <h2 id="restaurant-name" aria-label="restaurant name"></h2>
+      <!--aria label added-->
       <img id="restaurant-img">
       <p id="restaurant-cuisine" aria-label="restaurant cuisine"></p>
       <p id="restaurant-address" aria-label="restaurant address"></p>
-      <table id="restaurant-hours" aria-label="restaurant hours"></table>  <!--aria label added-->
+      <table id="restaurant-hours" aria-label="restaurant hours"></table>
+      <!--aria label added-->
     </section>
     <!-- end restaurant -->
     <!-- Beginning reviews -->
@@ -52,8 +59,12 @@
   <!-- End main -->
 
   <!-- Beginning footer -->
-  <footer id="footer" aria-label="footer"> <!--aria label added-->
-    Copyright (c) 2018 <a href="/"><strong> Restaurant Reviews</strong></a> All Rights Reserved.
+  <footer id="footer" aria-label="footer">
+    <!--aria label added-->
+    Copyright (c) 2018
+    <a href="/">
+      <strong> Restaurant Reviews</strong>
+    </a> All Rights Reserved.
   </footer>
   <!-- End footer -->
   <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script> -->
@@ -63,7 +74,7 @@
   <!-- Main javascript file -->
   <script type="text/javascript" src="js/restaurant_info.js"></script>
   <!-- Google Maps -->
- <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZNLBgsQLzqHwJj9xeMbNlOiSvManr6VE&libraries=places&callback=initMap"></script> 
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZNLBgsQLzqHwJj9xeMbNlOiSvManr6VE&libraries=places&callback=initMap"></script>
   <!-- End scripts -->
 
 </body>
