--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-  <meta name="viewport" content= "width=device-width, initial-scale=1.0">  
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ==" crossorigin=""/>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" integrity="sha512-Rksm5RenBEKSKFjgI3a41vrjkw4EVPlJ3+OiI65vTjIdo9brlAacEuKOiQ5OFh7cOI1bkDwLqdLw3Zg0cRJAAQ=="
+    crossorigin="" />
   <title>Restaurant Reviews</title>
 </head>
 
 <body>
   <header>
-      <a href="#maincontent" class="skip-link">Skip to main Content</a>   <!--Add skip-link-->
+    <a href="#maincontent" class="skip-link">Skip to main Content</a>
+    <!--Add skip-link-->
     <nav>
-      <h1><a aria-label="Home Page" href="/">Restaurant Reviews</a></h1>
+      <h1>
+        <a aria-label="Home Page" href="/">Restaurant Reviews</a>
+      </h1>
     </nav>
   </header>
 
-   <main id="maincontent" tabindex="-1">   <!--for older browser add tab-1-->
+  <main id="maincontent" tabindex="-1">
+    <!--for older browser add tab-1-->
     <section id="map-container">
-      <div id="map" aria-label="map"></div>
+      <div id="map" aria-label="map" role="application"></div>
     </section>
     <section>
       <div class="filter-options">
         <h2>Filter Results</h2>
-         <select id="neighborhoods-select" aria-label="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">    <!-- aria label added-->
+        <select id="neighborhoods-select" aria-label="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+          <!-- aria label added-->
           <option value="all">All Neighborhoods</option>
         </select>
-        <select id="cuisines-select" aria-label="cuisines-select" name="cuisines" onchange="updateRestaurants()">  <!-- aria label added-->
+        <select id="cuisines-select" aria-label="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+          <!-- aria label added-->
           <option value="all">All Cuisines</option>
         </select>
       </div>
@@ -37,11 +44,14 @@
   <!-- <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js" integrity="sha512-/Nsx9X4HebavoBvEBuyp3I7od5tA0UzAxs+j83KgC8PU0kgB4XiK4Lfe4y4cgBtaRJQEIFCW+oC506aPT2L1zw==" crossorigin=""></script> -->
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZNLBgsQLzqHwJj9xeMbNlOiSvManr6VE&libraries=places&callback=initMap"></script> 
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBZNLBgsQLzqHwJj9xeMbNlOiSvManr6VE&libraries=places&callback=initMap"></script>
 
 
   <footer id="footer" aria-label="footer">
-    Copyright (c) 2018 <a href="/"><strong>Restaurant Reviews</strong></a> All Rights Reserved.
+    Copyright (c) 2018
+    <a href="/">
+      <strong>Restaurant Reviews</strong>
+    </a> All Rights Reserved.
   </footer>
 
 </body>
